--- a/data/en/sections/accomplishments.yaml
+++ b/data/en/sections/accomplishments.yaml
@@ -11,7 +11,7 @@ section:
 
 # Your accomplishments
 accomplishments:
-- name: Data Analysis amd ML using Python
+- name: Data Analysis and ML using Python
   # timeline: "Augu 2018 - March 2019"
   organization: 
     name: E & ICT Academy, IIT Roorkee
