--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -14,7 +14,7 @@ experiences:
     name: Koita Centre for Digital Health, IITB
     url: "https://www.kcdh.iitb.ac.in/"
     location: Bombay, India
-    logo: /images/sections/experiences/company1.jpg
+    logo: /images/sections/experiences/company1.jpeg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company1.jpg
     # company overview
@@ -43,7 +43,7 @@ experiences:
     name: IISER Tirupati
     url: "https://www.iisertirupati.ac.in"
     location: Tirupati, India
-    logo: /images/sections/experiences/company2.jpg
+    logo: /images/sections/experiences/company2.png
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company2.jpg
     overview: IISER Tirupati is established for imparting quality education in basic sciences and for setting up state-of-the-art research in science.
@@ -62,7 +62,7 @@ experiences:
     location: Pune, India
     logo: /images/sections/experiences/company3.jpg
     # Can optionally show a different logo for dark theme
-    # darklogo: /images/sections/experiences/company3.jpg
+    # darklogo: assets\images\sections\experiences\company3.jpg
     overview: IISER Pune is a premier institute dedicated to research and teaching in the basic sciences.
   positions:
   - designation: Summer Intern
