--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -27,8 +27,8 @@ projects:
   timeline: "June 2023 - Present"
   # repo: https://github.com/shravanasati/animeviz # If your project is a public repo on GitHub, then provide this link. it will show star count.
   # url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Explored a novel approach to deal with the data harmonization challenge in neuroimaging research. We demonstrated the usability of this approach and systematically studied the impact of interpolated data. 
-  tags: ["numpy", "pandas", "matplotlib", "python", "scikit-learn", "Shell Scripting"]
+  summary: "Explored a novel approach to deal with the data harmonization challenge in neuroimaging research. We demonstrated the usability of this approach and systematically studied the impact of interpolated data."
+  tags: []
 
 - name: AI Bicep Curls Counter
   # logo: /images/sections/projects/tensorflow.png
@@ -36,33 +36,34 @@ projects:
   timeline: "Oct 2022 - Nov 2022"
   repo: "https://github.com/Aditi-Asati/AI-Biceps-Curl-Counter"
   # url: "https://github.com/Aditi-Asati/AI-Biceps-Curl-Counter"
-  summary: An AI which counts the number of Bicep Curls when a trainee is performing it in front of the camera in real time.
-  tags: ["python", "flask", "postgres", "vercel", "nodejs", "tailwindcss", "javascript"]
+  summary: "An AI which counts the number of Bicep Curls when a trainee is performing it in front of the camera in real time."
+  tags: []
 
 - name: Poetic Text Generator
   role: Developer
   timeline: "Oct 2022 - Nov 2022"
   repo: "https://github.com/Aditi-Asati/Poetic-Text-generation"
-  # url: "https://www.example.com"
-  summary: A program which generates poetic texts like Shakespeare using Natural Language Processing.
-  tags: ["go","cli", "wallpaper manager"]
+  # url: "https://github.com/Aditi-Asati/Poetic-Text-generation"
+  summary: "A program which generates poetic texts like Shakespeare using Natural Language Processing."
+  tags: []
 
 - name: News Article Summarizer
   # logo: /images/sections/projects/no-code.png
   role: Developer
   timeline: "Oct 2022 - Nov 2022"
   repo: "https://github.com/Aditi-Asati/Summarize-News-Article"
-  #url: ""
-  summary: A program which tells the title, summary, authors, publishing date and polarity of the news article just by providing its URL.
-  tags: ["go", "cli"]
+  # url: ""
+  summary: "A program which tells the title, summary, authors, publishing date and polarity of the news article just by providing its URL."
+  tags: []
 
-# - name: Pokedex Using Image Classification
-#   # logo: /images/sections/projects/toha.png
-#   role: Developer
-#   timeline: "Dec 2022 - Present"
-#   repo: https://github.com/shravanasati/stellapy
-#   summary: CLI utility to streamline your web development experience - live reload for the terminal as well as browser.
-#   tags: ["python","cli"]
+- name: Pokedex Using Image Classification (Ongoing)
+  # logo: /images/sections/projects/toha.png
+  role: Developer
+  timeline: "Jan 2024 - Present"
+  repo: "https://github.com/Aditi-Asati/Pokedex-Using-Image-Classification"
+  # url: https://github.com/shravanasati/stellapy
+  summary: "Its a pokedex which tells the information about the pokemon just by looking at its image."
+  tags: []
 
 # - name: pyscreenrec
 #   # logo: /images/sections/projects/toha.png
@@ -70,14 +71,14 @@ projects:
 #   timeline: "Feb 2021 - May 2021"
 #   url: "https://pypi.org/project/pyscreenrec"
 #   summary: A lightweight and cross-platform python library to record screen.
-#   tags: ["python", "library", "opencv"]
+  # tags: ["python", "library", "opencv"]
 
 # - name: projectile motion simulator
 #   role: Developer
 #   timeline: June 2023 - July 2023
 #   repo: "https://github.com/shravanasati/projectile-motion-simulator"
 #   summary: A python script that simulates the ground-to-ground projectile motion of a circular object, with varying parameters like gravitational acceleration, initial velocity and the angle of projection.
-#   tags: ["python", "pygame", "physics", "simulation"]
+  # tags: ["python", "pygame", "physics", "simulation"]
 
 # - name: emozi
 #   role: Developer
