--- a/data/en/sections/accomplishments.yaml
+++ b/data/en/sections/accomplishments.yaml
@@ -15,7 +15,7 @@ accomplishments:
   # timeline: "Augu 2018 - March 2019"
   organization: 
     name: E & ICT Academy, IIT Roorkee
-    url: https://www.linuxfoundation.org
+    url: https://eict.iitr.ac.in/
   courseOverview: This course teaches fundamental data analysis using Numpy, Pandas, and Matplotlib in hands-on manner.  It also helps to understand the basics of some classical machine learning algorithms such as K-Nearest Neighbor, Support Vector Machine, Decision Trees, Linear Regression, etc.
   certificateURL: "files/certificate.jpg"
 
