--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -20,7 +20,7 @@ company:
 
 # a summary about you
 # summary: 'I am a passionate software engineer with x years of working experience. I built OSS tools for [Kubernetes](https://kubernetes.io/) using GO. My tools help people to deploy their workloads in Kubernetes. Sometimes, I work on some fun projects such as writing a theme, etc.'
-summary: "I'm a passionate machine learning practioner who's currently looking for an industry position in ML."
+summary: "I'm a passionate about Data Science and machine learning. I am currently looking for an industry position as a Data Scientist or Data Analyst or BI Engineer."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
