--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -28,17 +28,17 @@ projects:
   timeline: "June 2024"
   # repo: https://github.com/Aditi-Asati/Hazelnut # If your project is a public repo on GitHub, then provide this link. it will show star count.
   url: "https://youtu.be/5KhLWRgA0XA?si=MFBDRvz7RPUf_EJQ"  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: "I developed a LangChain-powered chatbot that generates and executes SQL queries from natural language input, ensuring it is aware of the database schema and conversation context. I built the application's frontend with Streamlit and developed the backend using FastAPI. Additionally, I containerized the application with Docker for efficient deployment."
-  tags: []
+  summary: "Engineered a LangChain-powered chatbot for natural language to SQL query generation and execution, integrating database schema awareness and conversation context for enhanced accuracy."
+  tags: ["LangChain", "Streamlit", "FastAPI", "Docker"]
 
-  - name: Tomato Doctor
+- name: Tomato Doctor
   # logo: /images/sections/projects/kubernetes.png
   role: Developer
   timeline: "June 2024"
   # repo: https://github.com/Aditi-Asati/Tomato-Doctor # If your project is a public repo on GitHub, then provide this link. it will show star count.
   url: "https://youtu.be/mgK7v0i_HpI?si=oWtpi5xlsUbrXUEB"  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: "I developed a deep learning model using transfer learning and TensorFlow to diagnose tomato leaf diseases with 86% accuracy on the test dataset. Each prediction includes a confidence score to indicate its accuracy. Moreover, I built the web application with Streamlit and FastAPI, and containerized it with Docker for efficient deployment."
-  tags: []
+  summary: "I developed a deep learning model using transfer learning and TensorFlow to diagnose tomato leaf diseases with 86% accuracy on the test dataset. Each prediction includes a confidence score to indicate its accuracy."
+  tags: ["Tensorflow", "Streamlit", "FastAPI", "Docker"]
 
 - name: Interpolation for Brain Age Prediction
   # logo: /images/sections/projects/kubernetes.png
@@ -46,8 +46,8 @@ projects:
   timeline: "June 2023 - Present"
   # repo: https://github.com/shravanasati/animeviz # If your project is a public repo on GitHub, then provide this link. it will show star count.
   # url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: "I conducted in-depth research on using synthetic data to mitigate site effects from structural MRI data. I designed and implemented the SMOTE algorithm in Python to generate synthetic data points and built pipelines for running various experiments using Scikit-learn, Python, and Shell Scripting to explore their effectiveness on brain age prediction. Furthermore, I articulated my research findings in a detailed thesis document and successfully defended the work in a 30-minute oral presentation, securing 8.9/10 project score."
-  tags: []
+  summary: "Conducted in-depth research on synthetic data utilization to mitigate site effects in structural MRI data. Implemented SMOTE algorithm in Python for synthetic datapoint generation and engineered experimental pipelines."
+  tags: ["Scikit-learn", "Python", "Shell Scripting"]
 
 - name: AI Bicep Curls Counter
   # logo: /images/sections/projects/tensorflow.png
@@ -56,7 +56,7 @@ projects:
   repo: "https://github.com/Aditi-Asati/AI-Biceps-Curl-Counter"
   # url: "https://github.com/Aditi-Asati/AI-Biceps-Curl-Counter"
   summary: "An AI which counts the number of Bicep Curls when a trainee is performing it in front of the camera in real time."
-  tags: []
+  tags: ["Scikit-learn", "Python", "OpenCV"]
 
 - name: Poetic Text Generator
   role: Developer
@@ -64,7 +64,7 @@ projects:
   repo: "https://github.com/Aditi-Asati/Poetic-Text-generation"
   # url: "https://github.com/Aditi-Asati/Poetic-Text-generation"
   summary: "A program which generates poetic texts like Shakespeare using Natural Language Processing."
-  tags: []
+  tags: ["NLP", "LSTM", "Tensorflow"]
 
 - name: News Article Summarizer
   # logo: /images/sections/projects/no-code.png
@@ -73,7 +73,7 @@ projects:
   repo: "https://github.com/Aditi-Asati/Summarize-News-Article"
   # url: ""
   summary: "A program which tells the title, summary, authors, publishing date and polarity of the news article just by providing its URL."
-  tags: []
+  tags: ["Sentiment Analysis", "NLP"]
 
 # - name: Pokedex Using Image Classification
 #   # logo: /images/sections/projects/toha.png
